test/TypeError/loopCheck.java
// You are supposed to support method calling for testing this case.
// The minimum required would be calling a method with an empty parameter list and belongs to a class without instance variables.
class loop {
    public static void main(String [] args) {
        {
        System.out.print("Factorial of 10 is:");
        System.out.println(new Factorial().compute10());
        }
    }
}

// This test case tests while loop execution.
class Factorial {
		int a;
		bool b;
    public int compute10(int a, int prod) {
        int prod;
        bool prod;
        int multiplier;
        int multiplier;
				a = bool;
				a = true;
        multiplier = 1;
        prod = 1;
        while (multiplier + 10) {
            prod = prod * multiplier;
            multiplier = multiplier + 1;
        }
        return prod;
    }
    public int compute10() {
			return 1;
		}
}
